--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,8 +3,8 @@
     <nav class="header__nav">
       <a href="./index.html" class="header__logo">
         <svg class="logo animate__animated animate__shakeY animate__repeat-1 animate__faster">
-          <use class="animate__delay-3s" href="./images/sprite.svg#film"></use></svg
-        ><span class="header__logo-span"> Filmoteka</span>
+          <use class="animate__delay-3s" href="./images/sprite.svg#film"></use>
+        </svg><span class="header__logo-span"> Filmoteka</span>
       </a>
       <ul class="header__nav-list">
         <li>
@@ -18,14 +18,8 @@
 
     <div class="header__form">
       <form class="header__search-form js-search-form" id="search-form">
-        <input
-          type="text"
-          name="query"
-          autocomplete="off"
-          placeholder="Movie search"
-          class="header__search-form-input"
-          id="search-form-input"
-        />
+        <input type="text" name="query" autocomplete="off" placeholder="Movie search" class="header__search-form-input"
+          id="search-form-input" />
         <button type="submit" class="header__form-btn"></button>
       </form>
       <div class="header__search-error is-hidden">
